added the missing link to youtube video

--- a/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " Installing [`yt-dlp`](https://github.com/yt-dlp/yt-dlp). and downloading the [video](https://) from youtube."
+        " Installing [`yt-dlp`](https://github.com/yt-dlp/yt-dlp) and downloading the [video](https://youtu.be/NSp2fEQ6wyA) from youtube."
       ],
       "metadata": {
         "id": "Ct4adIANpQvX"
