added input from drive - not complete

--- a/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Majdoddin/nlp/blob/develop/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Whisper's transcription plus Pyannote's Diarization \n",
         "\n",
@@ -26,6 +36,133 @@
       "metadata": {
         "id": "wtljXaTXnowa"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**Optional:** Connect to Google Drive\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "bUA_4lnNgpSW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "from pathlib import Path\n",
+        "\n",
+        "drive_mount_path = Path(\"/content/drive\")\n",
+        "drive.mount(str(drive_mount_path))\n",
+        "drive_mount_path /= \"MyDrive\"\n",
+        "\n",
+        "#drive_path = \"Colab Notebooks/WhisperPyannote\" #@param {type:\"string\"}\n",
+        "#drive_whisper_path = drive_mount_path / Path(drive_path.lstrip(\"/\"))\n",
+        "#drive_whisper_path.mkdir(parents=True, exist_ok=True)"
+      ],
+      "metadata": {
+        "id": "B3tqC8m8fyCJ",
+        "outputId": "5e7a4e4b-881d-4024-ac8f-3047576ec1e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(str(drive_mount_path))\n"
+      ],
+      "metadata": {
+        "id": "ZSGHOO6KlwCq",
+        "outputId": "f7ac2db9-48c7-44fd-b901-32a149c076ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from yt_dlp import YoutubeDL\n",
+        "\n",
+        "#@markdown # **Video selection** 📺\n",
+        "#@markdown Enter the URL of the Youtube video you want to transcribe, or local path to the video/audio file, and run the cell.\n",
+        "\n",
+        "Source = \"Google Drive\" #@param ['Youtube', 'Google Drive']\n",
+        "#@markdown ---\n",
+        "#@markdown #### **Youtube video**\n",
+        "URL = \"https://youtu.be/NSp2fEQ6wyA\" #@param {type:\"string\"}\n",
+        "#store_audio = True #@param {type:\"boolean\"}\n",
+        "#@markdown ---\n",
+        "#@markdown #### **Google Drive video or audio (mp4, wav)**\n",
+        "video_path = \"/content/drive/MyDrive/Colab Notebooks/PyannoteWhisper/\" #@param {type:\"string\"}\n",
+        "#@markdown ---\n",
+        "output_path = \"/content/drive/MyDrive/Colab Notebooks/PyannoteWhisper/\" #@param {type:\"string\"}\n",
+        "#@markdown ---\n",
+        "#@markdown **Run this cell again if you change the video.**\n",
+        "\n",
+        "drive_whisper_path.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "if Source == \"Youtube\":\n",
+        "  #Installing yt-dlp and downloading the video from youtube.\n",
+        "  !pip install -U yt-dlp\n",
+        "  #Custom build of ffmpeg as recommended by yt-dlp.\n",
+        "  !wget -O - -q  https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz | xz -qdc| tar -x\n",
+        "  with YoutubeDL() as ydl: \n",
+        "    info_dict = ydl.extract_info(video_url, download=False)\n",
+        "    video_title = info_dict.get('title', None)\n",
+        "    print(\"Title: \" + video_title) # <= Here, you got the video title \n",
+        "  !yt-dlp -xv --ffmpeg-location ffmpeg-master-latest-linux64-gpl/bin --audio-format wav  -o input.wav -- {URL}   \n",
+        "elif Source == \"Google Drive\":\n",
+        "    !ffmpeg -i {video_path} -vn -acodec pcm_s16le -ar 16000 -ac 1 input.wav    \n",
+        "else:\n",
+        "    raise(TypeError(\"Please select supported input type.\"))"
+      ],
+      "metadata": {
+        "id": "1zqnZsBacKph",
+        "outputId": "d4a6f287-0fbc-4e5b-dfef-6cc046a76f08",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 74
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "# The data consists of hello observations. Bla, Bla, ...."
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1495,7 +1632,8 @@
     "colab": {
       "collapsed_sections": [],
       "provenance": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -4672,8 +4810,7 @@
           }
         }
       }
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
