--- a/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
@@ -114,7 +114,7 @@
         "Source = \"Google Drive\" #@param ['Youtube', 'Google Drive']\n",
         "#@markdown ---\n",
         "#@markdown #### **Youtube video**\n",
-        "URL = \"https://youtu.be/NSp2fEQ6wyA\" #@param {type:\"string\"}\n",
+        "video_url = \"https://youtu.be/NSp2fEQ6wyA\" #@param {type:\"string\"}\n",
         "#store_audio = True #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
         "#@markdown #### **Google Drive video or audio (mp4, wav)**\n",
@@ -135,11 +135,9 @@
         "    info_dict = ydl.extract_info(video_url, download=False)\n",
         "    video_title = info_dict.get('title', None)\n",
         "    print(\"Title: \" + video_title) # <= Here, you got the video title \n",
-        "  !yt-dlp -xv --ffmpeg-location ffmpeg-master-latest-linux64-gpl/bin --audio-format wav  -o input.wav -- {URL}   \n",
+        "  !yt-dlp -xv --ffmpeg-location ffmpeg-master-latest-linux64-gpl/bin --audio-format wav  -o input.wav -- {video_url}   \n",
         "elif Source == \"Google Drive\":\n",
-        "    !ffmpeg -i {video_path} -vn -acodec pcm_s16le -ar 16000 -ac 1 input.wav    \n",
-        "else:\n",
-        "    raise(TypeError(\"Please select supported input type.\"))"
+        "    !ffmpeg -i {video_path} -vn -acodec pcm_s16le -ar 16000 -ac 1 input.wav    "
       ],
       "metadata": {
         "id": "1zqnZsBacKph",
