--- a/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
@@ -124,7 +124,7 @@
         "#@markdown ---\n",
         "#@markdown **Run this cell again if you change the video.**\n",
         "\n",
-        "drive_whisper_path.mkdir(parents=True, exist_ok=True)\n",
+        "output_path.mkdir(parents=True, exist_ok=True)\n",
         "\n",
         "if Source == \"Youtube\":\n",
         "  #Installing yt-dlp and downloading the video from youtube.\n",
@@ -137,7 +137,7 @@
         "    print(\"Title: \" + video_title) # <= Here, you got the video title \n",
         "  !yt-dlp -xv --ffmpeg-location ffmpeg-master-latest-linux64-gpl/bin --audio-format wav  -o input.wav -- {video_url}   \n",
         "elif Source == \"Google Drive\":\n",
-        "    !ffmpeg -i {video_path} -vn -acodec pcm_s16le -ar 16000 -ac 1 input.wav    "
+        "    !ffmpeg -i {repr(video_path)} -vn -acodec pcm_s16le -ar 16000 -ac 1 input.wav    "
       ],
       "metadata": {
         "id": "1zqnZsBacKph",
