--- a/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
@@ -109,7 +109,7 @@
         "from yt_dlp import YoutubeDL\n",
         "\n",
         "#@markdown # **Video selection** 📺\n",
-        "#@markdown Enter the URL of the Youtube video you want to transcribe, or local path to the video/audio file, and run the cell.\n",
+        "#@markdown Enter the URL of the Youtube video, or the path to the video/audio file you want to transcribe, give the output path, and run the cell.\n",
         "\n",
         "Source = \"Google Drive\" #@param ['Youtube', 'Google Drive']\n",
         "#@markdown ---\n",
