--- a/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
@@ -105,8 +105,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown # **Video selection** 📺\n",
-        "#@markdown Enter the URL of the Youtube video, or the path to the video/audio file you want to transcribe, give the output path, and run the cell.\n",
+        "#@markdown Enter the URL of the YouTube video, or the path to the video/audio file you want to transcribe, give the output path, and run the cell. HTML file is generated only for YouTube videos\n",
         "\n",
         "Source = \"Youtube\" #@param ['Youtube', 'File (Google Drive)']\n",
         "#@markdown ---\n",
@@ -131,44 +130,14 @@
     {
       "cell_type": "code",
       "source": [
-        "Path(output_path).mkdir(parents=True, exist_ok=True)"
+        "Path(output_path).mkdir(parents=True, exist_ok=True)\n",
+        "%cd {output_path}"
       ],
       "metadata": {
         "id": "6vgK82ahXNje"
       },
       "execution_count": 15,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "repr(str(Path('/co on/bb')))"
-      ],
-      "metadata": {
-        "id": "4Pju9OU-avOM",
-        "outputId": "b02f1091-3011-474f-a4a4-93cc936f3420",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\"'/co on/bb'\""
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 20
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -360,7 +329,7 @@
     {
       "cell_type": "code",
       "source": [
-        "if Source == \"Google Drive\":\n",
+        "if Source == 'File (Google Drive)':\n",
         "    !ffmpeg -i {repr(video_path)} -vn -acodec pcm_s16le -ar 16000 -ac 1 input.wav  "
       ],
       "metadata": {
@@ -418,7 +387,6 @@
       "cell_type": "code",
       "source": [
         "from pydub import AudioSegment\n",
-        "%cd {output_path}\n",
         "\n",
         "spacermilli = 2000\n",
         "spacer = AudioSegment.silent(duration=spacermilli)\n",
@@ -1384,7 +1352,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Generating the HTML file from the Transcriptions and the Diarization"
+        "# Generating the HTML and/or txt file from the Transcriptions and the Diarization"
       ],
       "metadata": {
         "id": "u_UyWQMXpB3N"
@@ -1484,6 +1452,7 @@
         "from datetime import timedelta\n",
         "\n",
         "html = list(preS)\n",
+        "txt = list(\"\")\n",
         "gidx = -1\n",
         "for g in groups:  \n",
         "  shift = re.findall('[0-9]+:[0-9]+:[0-9]+\\.[0-9]+', string=g[0])[0]\n",
@@ -1492,6 +1461,7 @@
         "  \n",
         "  gidx += 1\n",
         "  captions = [[(int)(millisec(caption.start)), (int)(millisec(caption.end)),  caption.text] for caption in webvtt.read(str(gidx) + '.wav.vtt')]\n",
+        "  #captions = (list) webvtt.read(str(gidx) + '.wav.vtt')\n",
         "\n",
         "  if captions:\n",
         "    speaker = g[0].split()[-1]\n",
@@ -1499,30 +1469,39 @@
         "    spkrclr = def_spkrclr\n",
         "    if speaker in speakers:\n",
         "      speaker, boxclr, spkrclr = speakers[speaker] \n",
+        "    \n",
         "    html.append(f'<div class=\"e\" style=\"background-color: {boxclr}\">\\n');\n",
         "    html.append(f'<span style=\"color: {spkrclr}\">{speaker}</span><br>\\n')\n",
         "      \n",
         "    for c in captions:\n",
         "      start = shift + c[0] \n",
-        "\n",
         "      start = start / 1000.0   #time resolution ot youtube is Second.\n",
-        "      startStr = '{0:02d}:{1:02d}:{2:02.2f}'.format((int)(start // 3600), \n",
+        "      startStr = '{0:02d}:{1:02d}:{2:02.3f}'.format((int)(start // 3600), \n",
         "                                              (int)(start % 3600 // 60), \n",
-        "                                              start % 60)      \n",
-        "      #html.append(f'<div class=\"c\">')\n",
-        "      #html.append(f'\\t\\t\\t\\t<a class=\"l\" href=\"#{startStr}\" id=\"{startStr}\">#</a> \\n')\n",
-        "      html.append(f'\\t\\t\\t\\t<a href=\"#{startStr}\" id=\"{startStr}\" class=\"lt\" onclick=\"jumptoTime({int(start)}, this.id)\">{c[2]}</a>\\n')\n",
-        "      #html.append(f'\\t\\t\\t\\t<div class=\"t\"> {c[2]}</div><br>\\n')\n",
-        "      #html.append(f'</div>')\n",
+        "                                              start % 60)\n",
+        "      end = shift + c[1] \n",
+        "      end = end / 1000.0   #time resolution ot youtube is Second.\n",
+        "      endStr = '{0:02d}:{1:02d}:{2:02.3f}'.format((int)(end // 3600), \n",
+        "                                              (int)(end % 3600 // 60), \n",
+        "                                              end % 60)            \n",
+        "      \n",
+        "      txt.append(f'[{startStr} --> {endStr}] [{speaker}] {c[2]}')\n",
+        "      html.append(f'\\t\\t\\t\\t<a href=\"#{startStr}\" id=\"{startStr}\" class=\"lt\" onclick=\"jumptoTime({int(start)}, this.id)\">{c[2]}</a>\\n')      \n",
         "\n",
         "    html.append(f'</div>\\n');\n",
         "\n",
         "html.append(postS)\n",
-        "s = \"\".join(html)\n",
         "\n",
-        "with open(\"capspeaker.html\", \"w\") as text_file:\n",
-        "    text_file.write(s)\n",
-        "print(s)"
+        "with open(\"capspeaker.txt\", \"w\") as file:\n",
+        "  s = \"\".join(txt)\n",
+        "  file.write(s)\n",
+        "if source == 'File (Google Drive)':\n",
+        "  print(s)\n",
+        "elif source == 'Youtube':\n",
+        "  with open(\"capspeaker.html\", \"w\") as file:    #TODO: proper \n",
+        "    s = \"\".join(html)\n",
+        "    file.write(s)\n",
+        "    print(s)"
       ],
       "metadata": {
         "colab": {
