--- a/whisper_source_seperation_change_of_speaker.ipynb
+++ b/whisper_source_seperation_change_of_speaker.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "mount_file_id": "1WPjicsG2iVtAXPaB3lg1Nfuiar0qYguo",
-      "authorship_tag": "ABX9TyO7+OguLo6zChkXW7u8L8kv",
+      "authorship_tag": "ABX9TyPDtAlzoC9KTs3hMjt8sZS2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,93 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0yA-OjLAxW3M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " Installing [`yt-dlp`](https://github.com/yt-dlp/yt-dlp) and downloading the [video](https://youtu.be/NSp2fEQ6wyA) from youtube."
+      ],
+      "metadata": {
+        "id": "Ct4adIANpQvX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TL7fC4aZdpyH"
+      },
+      "outputs": [],
+      "source": [
+        "if Source == \"Youtube\":\n",
+        "  !pip install -U yt-dlp"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KsedMPN-daEX"
+      },
+      "outputs": [],
+      "source": [
+        "if Source == \"Youtube\":\n",
+        "  !wget -O - -q  https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz | xz -qdc| tar -x"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2VHzpv72dkvV"
+      },
+      "outputs": [],
+      "source": [
+        "video_url = 'https://youtu.be/NSp2fEQ6wyA'\n",
+        "!yt-dlp -xv --ffmpeg-location ffmpeg-master-latest-linux64-gpl/bin --audio-format wav  -o \"audio.wav\" -- {video_url}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pydub"
+      ],
+      "metadata": {
+        "id": "4-xR_GorzL29"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pydub import AudioSegment\n",
+        "\n",
+        "spacermilli = 2000\n",
+        "spacer = AudioSegment.silent(duration=spacermilli)\n",
+        "\n",
+        "\n",
+        "audio = AudioSegment.from_wav(\"input.wav\") \n",
+        "\n",
+        "audio = spacer.append(audio, crossfade=0)\n",
+        "\n",
+        "\n",
+        "audio.export('input_prep.wav', format='wav')"
+      ],
+      "metadata": {
+        "id": "D15Mp12fzasF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Zou3_iWcgHe7"
@@ -44,33 +131,10 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "YwWJO-I8ta0-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "!whisper test.m4a --language en --model large"
       ],
       "metadata": {
         "id": "eh1YhO1cgRCz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pwd"
-      ],
-      "metadata": {
-        "id": "1I_SCPfUguiH"
       },
       "execution_count": null,
       "outputs": []
