--- a/whisper_source_seperation_change_of_speaker.ipynb
+++ b/whisper_source_seperation_change_of_speaker.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "mount_file_id": "1WPjicsG2iVtAXPaB3lg1Nfuiar0qYguo",
-      "authorship_tag": "ABX9TyPDtAlzoC9KTs3hMjt8sZS2",
+      "authorship_tag": "ABX9TyMFnTgB0P8hOZnPdNpBpAqI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,15 +31,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0yA-OjLAxW3M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         " Installing [`yt-dlp`](https://github.com/yt-dlp/yt-dlp) and downloading the [video](https://youtu.be/NSp2fEQ6wyA) from youtube."
@@ -56,7 +47,6 @@
       },
       "outputs": [],
       "source": [
-        "if Source == \"Youtube\":\n",
         "  !pip install -U yt-dlp"
       ]
     },
@@ -68,7 +58,6 @@
       },
       "outputs": [],
       "source": [
-        "if Source == \"Youtube\":\n",
         "  !wget -O - -q  https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz | xz -qdc| tar -x"
       ]
     },
@@ -100,19 +89,43 @@
       "source": [
         "from pydub import AudioSegment\n",
         "\n",
-        "spacermilli = 2000\n",
+        "spacermilli = 1000\n",
         "spacer = AudioSegment.silent(duration=spacermilli)\n",
         "\n",
+        "audio = AudioSegment.from_wav(\"audio.wav\") \n",
+        "sound1 = audio[(4*60+6)*1000+53:]\n",
+        "sound1.export('sound1.wav', format='wav')\n",
         "\n",
-        "audio = AudioSegment.from_wav(\"input.wav\") \n",
+        "sound2 = audio[(3*60+59)*1000+93:(4*60+6)*1000+53]\n",
+        "sound2 = spacer.append(sound2, crossfade=0)\n",
+        "sound2.export('sound2.wav', format='wav')\n",
         "\n",
-        "audio = spacer.append(audio, crossfade=0)\n",
-        "\n",
-        "\n",
-        "audio.export('input_prep.wav', format='wav')"
+        "combined = sound1.overlay(sound2)\n",
+        "combined.export('combined.wav', format='wav')"
       ],
       "metadata": {
         "id": "D15Mp12fzasF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import display, Audio \n",
+        "display(Audio('combined.wav'))"
+      ],
+      "metadata": {
+        "id": "21APLXwJgBJT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QSzLKZ7vgx9D"
       },
       "execution_count": null,
       "outputs": []
@@ -125,7 +138,7 @@
       },
       "outputs": [],
       "source": [
-        "pip install git+https://github.com/openai/whisper.git "
+        "!pip install git+https://github.com/openai/whisper.git "
       ]
     },
     {
