--- a/whisper_source_seperation_change_of_speaker.ipynb
+++ b/whisper_source_seperation_change_of_speaker.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "mount_file_id": "1WPjicsG2iVtAXPaB3lg1Nfuiar0qYguo",
-      "authorship_tag": "ABX9TyMFnTgB0P8hOZnPdNpBpAqI",
+      "authorship_tag": "ABX9TyNytmvl2ayldK2Wxj4L9J6+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d-eO_CF_nXnN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Whisper source seperation\n",
+        "This is a demonstration, that whisper can seperate overlapping voices, and generate "
+      ],
+      "metadata": {
+        "id": "J-YkSRlVnYlN"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         " Installing [`yt-dlp`](https://github.com/yt-dlp/yt-dlp) and downloading the [video](https://youtu.be/NSp2fEQ6wyA) from youtube."
@@ -38,6 +57,30 @@
       "metadata": {
         "id": "Ct4adIANpQvX"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/myDrive\")"
+      ],
+      "metadata": {
+        "id": "eSZWVh4giH2c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%mkdir /content/myDrive/MyDrive/ai/whisper3\n",
+        "%cd /content/myDrive/MyDrive/ai/whisper3"
+      ],
+      "metadata": {
+        "id": "D3RyjA6SjUL0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -96,7 +139,7 @@
         "sound1 = audio[(4*60+6)*1000+53:]\n",
         "sound1.export('sound1.wav', format='wav')\n",
         "\n",
-        "sound2 = audio[(3*60+59)*1000+93:(4*60+6)*1000+53]\n",
+        "sound2 = audio[(3*60+42)*1000+65:(3*60+50)*1000+750]\n",
         "sound2 = spacer.append(sound2, crossfade=0)\n",
         "sound2.export('sound2.wav', format='wav')\n",
         "\n",
@@ -113,6 +156,8 @@
       "cell_type": "code",
       "source": [
         "from IPython.display import display, Audio \n",
+        "display(Audio('sound1.wav'))\n",
+        "display(Audio('sound2.wav'))\n",
         "display(Audio('combined.wav'))"
       ],
       "metadata": {
@@ -144,7 +189,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!whisper test.m4a --language en --model large"
+        "!whisper combined.wav --language en --model large"
       ],
       "metadata": {
         "id": "eh1YhO1cgRCz"
