--- a/whisper_source_seperation_change_of_speaker.ipynb
+++ b/whisper_source_seperation_change_of_speaker.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "mount_file_id": "1WPjicsG2iVtAXPaB3lg1Nfuiar0qYguo",
-      "authorship_tag": "ABX9TyNytmvl2ayldK2Wxj4L9J6+",
+      "authorship_tag": "ABX9TyPbDxRUbyW3ycEzl8Aqnr0j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
       "cell_type": "markdown",
       "source": [
         "# Whisper source seperation\n",
-        "This is a demonstration, that whisper can seperate overlapping voices, and generate "
+        "This is a demonstration, that whisper can seperate overlapping voices, and generate the transcription for ONE of them."
       ],
       "metadata": {
         "id": "J-YkSRlVnYlN"
@@ -56,6 +56,20 @@
       ],
       "metadata": {
         "id": "Ct4adIANpQvX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "e286Uh55rje0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "qlWyYFuOrjig"
       }
     },
     {
