--- a/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
@@ -13,6 +13,9 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[![notebook shield](https://img.shields.io/static/v1?label=&message=Notebook&color=blue&style=for-the-badge&logo=googlecolab&link=https://colab.research.google.com/github/ArthurFDLR/whisper-youtube/blob/main/whisper_youtube.ipynb)](https://colab.research.google.com/github/Majdoddin/nlp/blob/develop/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb)\n",
+        "[![repository shield](https://img.shields.io/static/v1?label=&message=Repository&color=blue&style=for-the-badge&logo=github&link=https://github.com/openai/whisper)](https://github.com/majdoddin/nlp)\n",
+        "\n",
         "# Whisper's transcription plus Pyannote's Diarization \n",
         "\n",
         "Andrej Karpathy [suggested](https://twitter.com/karpathy/status/1574476200801538048?s=20&t=s5IMMXOYjBI6-91dib6w8g) training a classifier on top of  OpenAI [Whisper](https://openai.com/blog/whisper/) model features to identify the speaker, so we can visualize the speaker in the transcript. But, as [pointed out](https://twitter.com/tarantulae/status/1574493613362388992?s=20&t=s5IMMXOYjBI6-91dib6w8g) by Christian Perone, it seems that features from whisper wouldn't be that great for speaker recognition as its main objective is basically to ignore speaker differences.\n",
@@ -66,7 +69,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +102,7 @@
       "metadata": {
         "id": "1zqnZsBacKph"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +120,7 @@
         "id": "6vgK82ahXNje",
         "outputId": "07e273f8-fed2-4ef8-9559-a5f55758e6d5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "TL7fC4aZdpyH",
         "colab": {
@@ -199,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "KsedMPN-daEX"
       },
@@ -228,7 +231,7 @@
         "id": "DNcD7tx9UmyK",
         "outputId": "1dd65e31-3ce4-4004-b989-39c67893b3cf"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "2VHzpv72dkvV"
       },
@@ -284,7 +287,7 @@
         "id": "VjORT6CkVoTF",
         "outputId": "461265df-b9de-44ff-ff94-efb1ce3d8c55"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "ZqznOE7Kw725",
         "colab": {
@@ -404,7 +407,7 @@
         "id": "MaRDsBV1CWi8",
         "outputId": "2ebd68b0-2982-4387-c1b7-0fcaa930ced4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "vJGyKTQJqdzq",
         "colab": {
@@ -714,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "r5u7VMb-YnqB",
         "outputId": "5aee4138-1920-4284-c0e6-b49eb644a099",
@@ -756,7 +759,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "jKG14DGYbwku",
         "colab": {
@@ -986,7 +989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "yA4xiEefft9Z"
       },
@@ -1011,7 +1014,7 @@
         "id": "GHIY2MB3Vz3e",
         "outputId": "a2c0173a-cec9-423f-96f3-264703e55c89"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,7 +1054,7 @@
       "metadata": {
         "id": "KPGOaVpOH7pZ"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1098,7 +1101,7 @@
         "id": "umQdzNFzcP2f",
         "outputId": "e6d1d371-5e62-4a1b-8eb4-e953a8ae766c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,7 +1151,7 @@
         "id": "dRQPUW4Mzvfn",
         "outputId": "6617cb2f-36ed-440d-9482-220fa64fdc03"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,7 +1223,7 @@
         },
         "outputId": "41a63f51-0472-49f5-db9f-8879b45e6a0a"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1290,7 +1293,7 @@
         },
         "outputId": "86069615-fe72-44ca-ca0d-dc6564ae4b41"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,7 +1391,7 @@
         "id": "aEPsEuS2k4yf",
         "outputId": "aba9e2cc-384a-456e-8315-567efa1e894f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1426,7 @@
       "metadata": {
         "id": "j7EP6fO73wTY"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1437,7 +1440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "vKdx9Hwg630K"
       },
@@ -1519,7 +1522,7 @@
         "id": "vqO6Nd6YfZYa",
         "outputId": "4388ecc0-6c5d-4bc0-8e36-ac2eecffc788"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
