--- a/whisper_source_seperation_change_of_speaker.ipynb
+++ b/whisper_source_seperation_change_of_speaker.ipynb
@@ -4,10 +4,7 @@
   "metadata": {
     "colab": {
       "private_outputs": true,
-      "provenance": [],
-      "mount_file_id": "1WPjicsG2iVtAXPaB3lg1Nfuiar0qYguo",
-      "authorship_tag": "ABX9TyPbDxRUbyW3ycEzl8Aqnr0j",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -22,26 +19,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Majdoddin/nlp/blob/develop/whisper_source_seperation_change_of_speaker.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "d-eO_CF_nXnN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "[![notebook shield](https://img.shields.io/static/v1?label=&message=Notebook&color=blue&style=for-the-badge&logo=googlecolab&link=https://colab.research.google.com/github/ArthurFDLR/whisper-youtube/blob/main/whisper_youtube.ipynb)](https://colab.research.google.com/github/Majdoddin/nlp/blob/main/whisper_source_seperation_change_of_speaker.ipynb)\n",
+        "[![repository shield](https://img.shields.io/static/v1?label=&message=Repository&color=blue&style=for-the-badge&logo=github&link=https://github.com/openai/whisper)](https://github.com/majdoddin/nlp)\n",
         "# Whisper source seperation\n",
         "This is a demonstration, that whisper can seperate overlapping voices, and generate the transcription for ONE of them."
       ],
