--- a/Pyannote_plays_and_Whisper_rhymes.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes.ipynb
@@ -9,8 +9,8 @@
         "\n",
         "In the following, I use [**`pyannote-audio`**](https://github.com/pyannote/pyannote-audio), a speaker diarization toolkit by Hervé Bredin, to identify the speakers, and then match it with the transcriptions of Whispr. I do it on the first 30 minutes of  Lex's 2nd [interview](https://youtu.be/SGzMElJ11Cc) with Yann LeCun. Check the result [**here**](https://majdoddin.github.io/lexicap.html). \n",
         "\n",
-        "It is tricky to match the transcriptions to diarization segemtns, specially when the speaker changes. To resolve it, Sarah Kaiser [suggested](https://github.com/openai/whisper/discussions/264#discussioncomment-3825375) runnnig the pyannote.audio first and  then just running whisper on the split-by-speaker chunks. \n",
-        "For sake of performance (and transcription quality?), we attach the audio segements into a single audio file with a silent spacer as a seperator, and run whisper on it. Enjoy it!"
+        "It is tricky to match the transcriptions to diarization segments, specially when the speaker changes. To resolve it, Sarah Kaiser [suggested](https://github.com/openai/whisper/discussions/264#discussioncomment-3825375) runnnig the pyannote.audio first and  then just running whisper on the split-by-speaker chunks. \n",
+        "For sake of performance (and transcription quality?), we attach the audio segments into a single audio file with a silent spacer as a separator, and run whisper on it. Enjoy it!"
       ],
       "metadata": {
         "id": "RQyROdrfsvk4"
@@ -863,7 +863,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Attaching audio segements according to the diarization, with a spacer as the delimiter."
+        "Attaching audio segments according to the diarization, with a spacer as the delimiter."
       ],
       "metadata": {
         "id": "VEEuVPj6H0J_"
