--- a/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
+++ b/Pyannote_plays_and_Whisper_rhymes_v_2_0.ipynb
@@ -1525,7 +1525,7 @@
         }
       ],
       "source": [
-        "import whisper, torch\n",
+        "import whisper\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "model = whisper.load_model('large', device = device)\n"
       ]
